--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,8 +1,13 @@
 ---
 import { Image } from '@astrojs/image/components'
-import logo from '../images/logo.svg'
+
 import '@fontsource/dm-sans/600.css'
 import '@fontsource/dm-sans/400.css'
+
+import logo from '../images/logo.svg'
+import githubIcon from '../images/github.svg'
+import twitterIcon from '../images/twitter.svg'
+import linkedinIcon from '../images/linkedin.svg'
 
 interface Props {
   title: string
@@ -26,9 +31,39 @@ const { title } = Astro.props
     <div
       class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)] sm:grid-cols-[minmax(64px,_1fr)_minmax(auto,_1024px)_minmax(64px,_1fr)]'
     >
-      <a href='/' class='[grid-column:_2] py-10'>
-        <Image alt='' src={logo} width={32} height={32} />
-      </a>
+      <div class='flex [grid-column:_2] py-10'>
+        <a href='/' class=''>
+          <Image alt='' src={logo} width={32} height={32} />
+        </a>
+        <a
+          href='https://github.com/laurakcleve'
+          target='_blank'
+          rel='noopener noreferrer'
+          class='ml-auto mr-4'
+        >
+          <Image alt='Github icon' src={githubIcon} width={24} height={24} />
+        </a>
+        <a
+          href='https://twitter.com/laurak_cleve'
+          target='_blank'
+          rel='noopener noreferrer'
+          class='mr-4'
+        >
+          <Image alt='Twitter icon' src={twitterIcon} width={24} height={24} />
+        </a>
+        <a
+          href='https://www.linkedin.com/in/laura-cleveland-4495844a/'
+          target='_blank'
+          rel='noopener noreferrer'
+        >
+          <Image
+            alt='LinkedIn icon'
+            src={linkedinIcon}
+            width={24}
+            height={24}
+          />
+        </a>
+      </div>
       <slot />
     </div>
   </body>
