--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,10 +11,10 @@ import logo from '../images/logo.svg'
 import githubIcon from '../images/github.svg'
 import twitterIcon from '../images/twitter.svg'
 import linkedinIcon from '../images/linkedin.svg'
-import nemesisAiThumbnail from '../images/nemesis-ai/thumbnail.jpg'
-import mealAppThumbnail from '../images/meal-app/thumbnail.jpg'
+import nemesisAiThumbnail from '../images/nemesis-ai/main.png'
+import mealAppThumbnail from '../images/meal-app/main.png'
 import vrTacticsThumbnail from '../images/vr-tactics/thumbnail.jpg'
-import thumbnail from '../images/terrain-blog/thumbnail.jpg'
+import thumbnail from '../images/terrain-blog/main.png'
 ---
 
 <Layout title='Laura Cleveland'>
