--- a/src/pages/vr-tactics.astro
+++ b/src/pages/vr-tactics.astro
@@ -82,7 +82,8 @@ import Heading from '../components/Heading.astro'
         <Picture
           src={featureControls}
           alt='controls feature'
-          widths={[706]}
+          widths={[880, 620, 400]}
+          sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 60vw, 620px'
           aspectRatio='706:602'
         />
       </div>
@@ -98,7 +99,8 @@ import Heading from '../components/Heading.astro'
         <Picture
           src={featurePathfinding}
           alt='pathfinding feature'
-          widths={[706]}
+          widths={[880, 620, 400]}
+          sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 60vw, 620px'
           aspectRatio='706:602'
         />
       </div>
@@ -113,7 +115,8 @@ import Heading from '../components/Heading.astro'
         <Picture
           src={featureAi}
           alt='AI feature'
-          widths={[706]}
+          widths={[880, 620, 400]}
+          sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 60vw, 620px'
           aspectRatio='706:602'
         />
       </div>
@@ -129,7 +132,8 @@ import Heading from '../components/Heading.astro'
         <Picture
           src={featureCancel}
           alt='cancel feature'
-          widths={[706]}
+          widths={[880, 620, 400]}
+          sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 60vw, 620px'
           aspectRatio='706:602'
         />
       </div>
@@ -198,7 +202,8 @@ import Heading from '../components/Heading.astro'
           <Picture
             src={unitychan}
             alt='unity-chan'
-            widths={[603]}
+            widths={[880, 600, 400]}
+            sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 30vw, 400'
             aspectRatio='603:266'
           />
         </div>
@@ -223,7 +228,8 @@ import Heading from '../components/Heading.astro'
         <Picture
           src={textures}
           alt='unity-chan textures'
-          widths={[573]}
+          widths={[880, 600, 400]}
+          sizes='(max-width: 1024px) 100vw, (max-width: 1200px) 30vw, 400'
           aspectRatio='573:581'
         />
       </div>
