Update styles on blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -118,7 +118,7 @@ import performance from '../images/terrain-blog/performance.jpg'
 
   <Section>
     <div class='flex justify-center'>
-      <div class='max-w-xl'>
+      <div class='max-w-xl rounded-xl overflow-hidden drop-shadow-custom'>
         <Picture
           src={performance}
           alt='performance'
