--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -34,7 +34,7 @@ import performance from '../images/terrain-blog/performance.jpg'
   </Section>
 
   <div
-    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#70cdf5] to-[#6073f7]'
+    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#67e9d6] to-[#6d6acb]'
   >
   </div>
 
