--- a/src/pages/meal-app.astro
+++ b/src/pages/meal-app.astro
@@ -44,7 +44,7 @@ import datalist from '../images/meal-app/datalist.png'
   </Section>
 
   <div
-    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#70cdf5] to-[#6073f7]'
+    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#67e9d6] to-[#6d6acb]'
   >
   </div>
 
