--- a/src/pages/nemesis-ai.astro
+++ b/src/pages/nemesis-ai.astro
@@ -10,7 +10,6 @@ import Heading from '../components/Heading.astro'
 
 import screenshot from '../images/nemesis-ai/main.png'
 import screenshotMobile from '../images/nemesis-ai/nem-mobile.png'
-import nem1NoBg from '../images/nemesis-ai/nem-1-no-bg.png'
 import nem3 from '../images/nemesis-ai/nem-3.png'
 import nemDoc1 from '../images/nemesis-ai/nem-doc-1.png'
 import nemDoc2 from '../images/nemesis-ai/nem-doc-2.png'
@@ -21,12 +20,15 @@ import nemDoc2 from '../images/nemesis-ai/nem-doc-2.png'
     <h1 class='mb-16 text-3xl font-bold'>Nemesis AI</h1>
     <p class='mb-10 max-w-xl'>
       Nemesis AI is a bot that I built to answer questions about the rules of
-      the board game <a
+      the board game
+      <a
         href='https://awakenrealms.com/games/nemesis/'
         target='_blank'
         rel='noopener noreferrer'
-        class='text-teal-500'>Nemesis</a
-      >.
+        class='text-[#89d1ed] border-b-2 border-[#77cbec]'
+      >
+        Nemesis
+      </a>.
     </p>
     <p class='mb-12 max-w-xl'>
       The project is a two-part system: the Python scripts that build an index
@@ -45,7 +47,7 @@ import nemDoc2 from '../images/nemesis-ai/nem-doc-2.png'
   </Section>
 
   <div
-    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#70cdf5] to-[#6073f7]'
+    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#67e9d6] to-[#6d6acb]'
   >
   </div>
 
