--- a/src/pages/vr-tactics.astro
+++ b/src/pages/vr-tactics.astro
@@ -38,7 +38,7 @@ import FeatureText from '../components/features/FeatureText.astro'
   </Section>
 
   <div
-    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#70cdf5] to-[#6073f7]'
+    class='[grid-column:2] w-full h-1 bg-gradient-to-br from-[#67e9d6] to-[#6d6acb]'
   >
   </div>
 
